add click args to workflow

--- a/.github/workflows/ci_cd.yml
+++ b/.github/workflows/ci_cd.yml
@@ -23,6 +23,17 @@ on:
           - '3.13'
           - 'All of the above'
         default: 'All of the above'
+      assembly:
+        description: "Create stubs for the following assembly:"
+        type: choice
+        options:
+          - 'Ansys.Mechanical.DataModel'
+          - 'Ansys.Mechanical.Interfaces'
+          - 'Ansys.ACT.Interfaces'
+          - 'Ansys.ACT.WB1'
+          - 'Ans.Core'
+          - 'All of the above'
+        default: 'All of the above'
       debug:
         description: "Enable debug mode"
         type: boolean
@@ -196,12 +207,35 @@ jobs:
           python -m pip install --trusted-host pypi.org --trusted-host pypi.python.org --trusted-host files.pythonhosted.org pip setuptools
           python -m pip install --upgrade pip flit pytz tzdata ansys-pythonnet
 
+      - name: "Get assembly and debug choice"
+        id: get-choices
+        run: |
+          if [[ "${{ github.event.inputs.assembly }}" == "All of the above" || "${{ github.event.inputs.assembly }}" == "" ]]; then
+            echo "assembly=--all-assemblies" >> $GITHUB_OUTPUT
+          elif [[ "${{ github.event.inputs.assembly }}" == "Ansys.Mechanical.DataModel" ]]; then
+            echo "assembly=--mechanical-datamodel" >> $GITHUB_OUTPUT
+          elif [[ "${{ github.event.inputs.assembly }}" == "Ansys.Mechanical.Interfaces" ]]; then
+            echo "assembly=--mechanical-interfaces" >> $GITHUB_OUTPUT
+          elif [[ "${{ github.event.inputs.assembly }}" == "Ansys.ACT.Interfaces" ]]; then
+            echo "assembly=--mechanical-act-interfaces" >> $GITHUB_OUTPUT
+          elif [[ "${{ github.event.inputs.assembly }}" == "Ansys.ACT.WB1" ]]; then
+            echo "assembly=--mechanical-act-wb1" >> $GITHUB_OUTPUT
+          elif [[ "${{ github.event.inputs.assembly }}" == "Ans.Core" ]]; then
+            echo "assembly=--ans-core" >> $GITHUB_OUTPUT
+          fi
+
+          if [[ "${{ github.event.inputs.debug }}" == "true" ]]; then
+            echo "debug=--debug" >> $GITHUB_OUTPUT
+          else
+            echo "debug=" >> $GITHUB_OUTPUT
+          fi
+
       - name: "Generate the Mechanical stub files"
         env:
           AWP_ROOTDV_DEV: /install/ansys_inc/v${{ matrix.mechanical.version }}
           ANSYSCL${{ matrix.mechanical.version }}_DIR: /install/ansys_inc/v${{ matrix.mechanical.version }}/licensingclient
         run: |
-          python src/ansys/mechanical/stubs/stub_generator/create_files.py > results.txt
+          python src/ansys/mechanical/stubs/stub_generator/create_files.py ${{ steps.get-choices.outputs.assembly }} --make ${{ steps.get-choices.outputs.debug }} > results.txt
         continue-on-error: True
 
       - name: "Check stubs were generated"
