cache stubs generation

--- a/.github/workflows/ci_cd.yml
+++ b/.github/workflows/ci_cd.yml
@@ -51,6 +51,7 @@ env:
   PACKAGE_NAMESPACE: ansys.mechanical.stubs
   PACKAGE_PATH: src/ansys/mechanical/stubs
   DOCUMENTATION_CNAME: scripting.mechanical.docs.pyansys.com
+  DOCKER_PACKAGE: ghcr.io/ansys/mechanical
   LICENSE_SERVER: ${{ secrets.LICENSE_SERVER }}
   ANSYSLMD_LICENSE_FILE: 1055@${{ secrets.LICENSE_SERVER }}
   ANSYS_WORKBENCH_LOGGING_CONSOLE: 0
@@ -200,6 +201,38 @@ jobs:
         run: |
           echo "Choices set: assembly=${{ steps.get-choices.outputs.assembly }}, debug=${{ steps.get-choices.outputs.debug }}"
 
+  get-container-sha:
+    name: Get container SHA for Mechanical images
+    runs-on: public-ubuntu-latest-16-cores
+    needs: [style, config-matrix]
+    strategy:
+      matrix: ${{ fromJSON(needs.config-matrix.outputs.stubs-matrix) }}
+    permissions:
+      contents: read
+      packages: read         # Required to pull Docker images from GitHub Container Registry
+      checks: write          # Needed to publish test results and status checks
+    steps:
+      - name: Login in Github Container registry
+        uses: docker/login-action@5e57cd118135c172c3672efd75eb46360885c0ef # v3.6.0
+        with:
+          registry: ghcr.io
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Pull, launch, and validate Mechanical service
+        env:
+          MECHANICAL_IMAGE: ${{ env.DOCKER_PACKAGE }}:${{ matrix.mechanical.image }}
+          MECHANICAL_VERSION: ${{ matrix.mechanical.image }}
+          LICENSE_SERVER: ${{ env.LICENSE_SERVER }}
+        run: |
+          docker pull ${MECHANICAL_IMAGE}
+
+          # Get the image SHA
+          image_sha=$(docker images --no-trunc --quiet ${MECHANICAL_IMAGE})
+          sha_only="${image_sha#*:}"
+
+          echo "MECHANICAL_${MECHANICAL_VERSION}_SHA=$sha_only" >> $GITHUB_ENV
+
   gen-stubs:
     name: Generate Mechanical stubs
     needs: [style, doc-style, config-matrix, check-inputs]
@@ -213,13 +246,21 @@ jobs:
       - name: "Install Git and clone project"
         uses: actions/checkout@8e8c483db84b4bee98b60c0593521ed34d9990e8 # v6.0.1
 
+      - uses: actions/cache/restore@cdf6c1fa76f9f475f3d7449005a359c84ca0f306 # v5.0.3
+        id: stubs-cache-restore
+        with:
+          path: ${{ env.PACKAGE_PATH }}/v${{ matrix.mechanical.version }}
+          key: ${{ runner.os }}-MECHANICAL_${{ matrix.mechanical.image }}_SHA-${{ matrix.python-version }}
+
       - name: "Set up Python"
+        if: steps.stubs-cache-restore.outputs.cache-hit != 'true'
         uses: ./.github/workflows/setup-python/
         with:
           python-version: ${{ matrix.python-version }}
           debug: ${{ github.event.inputs.debug }}
 
       - name: "Configure Python"
+        if: steps.stubs-cache-restore.outputs.cache-hit != 'true'
         run: |
           # Link python to the installed version
           ln -s /usr/local/bin/python${{ matrix.python-version }} /usr/bin/python
@@ -230,6 +271,7 @@ jobs:
           python -m pip --version
 
       - name: "Install dependencies"
+        if: steps.stubs-cache-restore.outputs.cache-hit != 'true'
         env:
           AWP_ROOTDV_DEV: /install/ansys_inc/v${{ matrix.mechanical.version }}
           ANSYSCL${{ matrix.mechanical.version }}_DIR: /install/ansys_inc/v${{ matrix.mechanical.version }}/licensingclient
@@ -242,6 +284,7 @@ jobs:
           python -m pip install --upgrade pip flit pytz tzdata ansys-pythonnet
 
       - name: "Generate the Mechanical stub files"
+        if: steps.stubs-cache-restore.outputs.cache-hit != 'true'
         env:
           AWP_ROOTDV_DEV: /install/ansys_inc/v${{ matrix.mechanical.version }}
           ANSYSCL${{ matrix.mechanical.version }}_DIR: /install/ansys_inc/v${{ matrix.mechanical.version }}/licensingclient
@@ -250,6 +293,7 @@ jobs:
         continue-on-error: True
 
       - name: "Check stubs were generated"
+        if: steps.stubs-cache-restore.outputs.cache-hit != 'true'
         run: |
           cat results.txt
 
@@ -262,6 +306,13 @@ jobs:
             echo "There was an issue creating the mechanical stubs"
             exit 1
           fi
+
+      - name: Save stubs cache
+        id: stubs-cache-save
+        uses: actions/cache/save@cdf6c1fa76f9f475f3d7449005a359c84ca0f306 # v5.0.3
+        with:
+          path: ${{ env.PACKAGE_PATH }}/v${{ matrix.mechanical.version }}
+          key: ${{ steps.stubs-cache-restore.outputs.cache-primary-key }}
 
       - name: "Upload v${{ matrix.mechanical.version }} stubs"
         uses: actions/upload-artifact@b7c566a772e6b6bfb58ed0dc250532a479d7789f # v6.0.0
