make gen-stubs dependent on get-container-sha

--- a/.github/workflows/ci_cd.yml
+++ b/.github/workflows/ci_cd.yml
@@ -235,7 +235,7 @@ jobs:
 
   gen-stubs:
     name: Generate Mechanical stubs
-    needs: [style, doc-style, config-matrix, check-inputs]
+    needs: [style, doc-style, config-matrix, check-inputs, get-container-sha]
     runs-on: public-ubuntu-latest-8-cores
     container:
       image: ghcr.io/ansys/mechanical:${{ matrix.mechanical.image }}
