--- a/.github/workflows/ci_cd.yml
+++ b/.github/workflows/ci_cd.yml
@@ -67,38 +67,38 @@ concurrency:
   cancel-in-progress: true
 
 jobs:
-  update-changelog:
-    name: "Update CHANGELOG for new tag"
-    if: github.event_name == 'push' && contains(github.ref, 'refs/tags')
-    runs-on: ubuntu-latest
-    permissions:
-      contents: write
-      pull-requests: write
-    steps:
-      - uses: ansys/actions/doc-deploy-changelog@36cd86710c966963f4dcec56a9670171618cf76a # v10.2.4
-        with:
-          token: ${{ secrets.PYANSYS_CI_BOT_TOKEN }}
-          bot-user: ${{ secrets.PYANSYS_CI_BOT_USERNAME }}
-          bot-email: ${{ secrets.PYANSYS_CI_BOT_EMAIL }}
+  # update-changelog:
+  #   name: "Update CHANGELOG for new tag"
+  #   if: github.event_name == 'push' && contains(github.ref, 'refs/tags')
+  #   runs-on: ubuntu-latest
+  #   permissions:
+  #     contents: write
+  #     pull-requests: write
+  #   steps:
+  #     - uses: ansys/actions/doc-deploy-changelog@36cd86710c966963f4dcec56a9670171618cf76a # v10.2.4
+  #       with:
+  #         token: ${{ secrets.PYANSYS_CI_BOT_TOKEN }}
+  #         bot-user: ${{ secrets.PYANSYS_CI_BOT_USERNAME }}
+  #         bot-email: ${{ secrets.PYANSYS_CI_BOT_EMAIL }}
 
-  style:
-    name: Code style
-    runs-on: ubuntu-latest
-    steps:
-      - name: "PyAnsys code style checks"
-        uses: ansys/actions/code-style@36cd86710c966963f4dcec56a9670171618cf76a # v10.2.4
-        with:
-          python-version: ${{ env.MAIN_PYTHON_VERSION }}
+  # style:
+  #   name: Code style
+  #   runs-on: ubuntu-latest
+  #   steps:
+  #     - name: "PyAnsys code style checks"
+  #       uses: ansys/actions/code-style@36cd86710c966963f4dcec56a9670171618cf76a # v10.2.4
+  #       with:
+  #         python-version: ${{ env.MAIN_PYTHON_VERSION }}
 
-  doc-style:
-    name: Documentation style check
-    runs-on: ubuntu-latest
-    steps:
-      - name: "PyAnsys documentation style checks"
-        uses: ansys/actions/doc-style@36cd86710c966963f4dcec56a9670171618cf76a # v10.2.4
-        with:
-          vale-config: doc/.vale.ini
-          token: ${{ secrets.GITHUB_TOKEN }}
+  # doc-style:
+  #   name: Documentation style check
+  #   runs-on: ubuntu-latest
+  #   steps:
+  #     - name: "PyAnsys documentation style checks"
+  #       uses: ansys/actions/doc-style@36cd86710c966963f4dcec56a9670171618cf76a # v10.2.4
+  #       with:
+  #         vale-config: doc/.vale.ini
+  #         token: ${{ secrets.GITHUB_TOKEN }}
 
   set-mechanical-versions:
     name: Set Mechanical image and version variables
@@ -203,7 +203,7 @@ jobs:
 
   gen-stubs:
     name: Generate Mechanical stubs
-    needs: [style, doc-style, config-matrix, check-inputs]
+    needs: [config-matrix, check-inputs] # style, doc-style,
     runs-on: public-ubuntu-latest-8-cores
     container:
       image: ghcr.io/ansys/mechanical:${{ matrix.mechanical.image }}
@@ -272,35 +272,35 @@ jobs:
           path: ${{ env.PACKAGE_PATH }}/v${{ matrix.mechanical.version }}
           retention-days: 7
 
-  smoke-tests:
-    name: Build wheelhouse
-    runs-on: ${{ matrix.os }}
-    needs: [gen-stubs, config-matrix]
-    strategy:
-      matrix: ${{ fromJSON(needs.config-matrix.outputs.test-matrix) }}
-    steps:
-    - name: "Install Git and clone project"
-      uses: actions/checkout@8e8c483db84b4bee98b60c0593521ed34d9990e8 # v6.0.1
+  # smoke-tests:
+  #   name: Build wheelhouse
+  #   runs-on: ${{ matrix.os }}
+  #   needs: [gen-stubs, config-matrix]
+  #   strategy:
+  #     matrix: ${{ fromJSON(needs.config-matrix.outputs.test-matrix) }}
+  #   steps:
+  #   - name: "Install Git and clone project"
+  #     uses: actions/checkout@8e8c483db84b4bee98b60c0593521ed34d9990e8 # v6.0.1
 
-    - name: "Download stubs"
-      uses: ./.github/workflows/setup-stubs/
-      with:
-        folder-pattern: "v[0-9][0-9][0-9]-${{ matrix.python-version }}"
-        package-path: "${{ env.PACKAGE_PATH }}"
-        python-version: ${{ matrix.python-version }}
+  #   - name: "Download stubs"
+  #     uses: ./.github/workflows/setup-stubs/
+  #     with:
+  #       folder-pattern: "v[0-9][0-9][0-9]-${{ matrix.python-version }}"
+  #       package-path: "${{ env.PACKAGE_PATH }}"
+  #       python-version: ${{ matrix.python-version }}
 
-    - name: "Build a wheelhouse of the Python library"
-      uses: ansys/actions/build-wheelhouse@36cd86710c966963f4dcec56a9670171618cf76a # v10.2.4
-      with:
-        library-name: ${{ env.PACKAGE_NAME }}
-        operating-system: ${{ matrix.os }}
-        python-version: ${{ matrix.python-version }}
-        checkout: false
+  #   - name: "Build a wheelhouse of the Python library"
+  #     uses: ansys/actions/build-wheelhouse@36cd86710c966963f4dcec56a9670171618cf76a # v10.2.4
+  #     with:
+  #       library-name: ${{ env.PACKAGE_NAME }}
+  #       operating-system: ${{ matrix.os }}
+  #       python-version: ${{ matrix.python-version }}
+  #       checkout: false
 
   doc-build:
     name: Make html and markdown documentation
     if: github.event.action != 'closed'
-    needs: [smoke-tests, config-matrix]
+    needs: [config-matrix] # smoke-tests
     runs-on: ubuntu-latest
     strategy:
       matrix: ${{ fromJSON(needs.config-matrix.outputs.doc-build-matrix) }}
@@ -372,6 +372,7 @@ jobs:
             version_folders=($(find . -maxdepth 1 -type d -name "$combined_folder_name-v[0-9][0-9][0-9]"))
 
             for folder in "${version_folders[@]}"; do
+              echo "Found version folder: $folder"
               if [ -d "$combined_folder_path" ]; then
                   folder_version="${folder##*-}"
                   version_path="api/ansys/mechanical/stubs/${folder_version}"
