--- a/.github/workflows/ci_cd.yml
+++ b/.github/workflows/ci_cd.yml
@@ -520,103 +520,103 @@ jobs:
           path: combined-documentation-md
           retention-days: 7
 
-  doc-deploy-pr:
-    name: "Deploy PR documentation"
-    runs-on: ubuntu-latest
-    needs: [clean-docs]
-    if: always() && (needs.clean-docs.result == 'success' || needs.clean-docs.result == 'skipped')
-    steps:
-      - uses: ansys/actions/doc-deploy-pr@36cd86710c966963f4dcec56a9670171618cf76a # v10.2.4
-        with:
-          cname: ${{ env.DOCUMENTATION_CNAME }}
-          token: ${{ secrets.GITHUB_TOKEN }}
-          bot-user: ${{ secrets.PYANSYS_CI_BOT_USERNAME }}
-          bot-email: ${{ secrets.PYANSYS_CI_BOT_EMAIL }}
-          maximum-pr-doc-deployments: 10
+  # doc-deploy-pr:
+  #   name: "Deploy PR documentation"
+  #   runs-on: ubuntu-latest
+  #   needs: [clean-docs]
+  #   if: always() && (needs.clean-docs.result == 'success' || needs.clean-docs.result == 'skipped')
+  #   steps:
+  #     - uses: ansys/actions/doc-deploy-pr@36cd86710c966963f4dcec56a9670171618cf76a # v10.2.4
+  #       with:
+  #         cname: ${{ env.DOCUMENTATION_CNAME }}
+  #         token: ${{ secrets.GITHUB_TOKEN }}
+  #         bot-user: ${{ secrets.PYANSYS_CI_BOT_USERNAME }}
+  #         bot-email: ${{ secrets.PYANSYS_CI_BOT_EMAIL }}
+  #         maximum-pr-doc-deployments: 10
 
-  build-library:
-    name: Build library
-    runs-on: ubuntu-latest
-    needs: [clean-docs]
-    steps:
-    - name: "Install Git and clone project"
-      uses: actions/checkout@8e8c483db84b4bee98b60c0593521ed34d9990e8 # v6.0.1
+  # build-library:
+  #   name: Build library
+  #   runs-on: ubuntu-latest
+  #   needs: [clean-docs]
+  #   steps:
+  #   - name: "Install Git and clone project"
+  #     uses: actions/checkout@8e8c483db84b4bee98b60c0593521ed34d9990e8 # v6.0.1
 
-    - name: "Set up Python"
-      uses: ansys/actions/_setup-python@36cd86710c966963f4dcec56a9670171618cf76a # v10.2.4
-      with:
-        python-version: ${{ env.MAIN_PYTHON_VERSION }}
-        use-cache: false
-        provision-uv: false
-        prune-uv-cache: false
+  #   - name: "Set up Python"
+  #     uses: ansys/actions/_setup-python@36cd86710c966963f4dcec56a9670171618cf76a # v10.2.4
+  #     with:
+  #       python-version: ${{ env.MAIN_PYTHON_VERSION }}
+  #       use-cache: false
+  #       provision-uv: false
+  #       prune-uv-cache: false
 
-    - name: "Download stubs"
-      uses: ./.github/workflows/setup-stubs/
-      with:
-        folder-pattern: "v[0-9][0-9][0-9]-${{ env.MAIN_PYTHON_VERSION }}"
-        package-path: "${{ env.PACKAGE_PATH }}"
-        python-version: ${{ env.MAIN_PYTHON_VERSION }}
+  #   - name: "Download stubs"
+  #     uses: ./.github/workflows/setup-stubs/
+  #     with:
+  #       folder-pattern: "v[0-9][0-9][0-9]-${{ env.MAIN_PYTHON_VERSION }}"
+  #       package-path: "${{ env.PACKAGE_PATH }}"
+  #       python-version: ${{ env.MAIN_PYTHON_VERSION }}
 
-    - name: Build library source and wheel artifacts
-      uses: ansys/actions/build-library@36cd86710c966963f4dcec56a9670171618cf76a # v10.2.4
-      with:
-        library-name: ${{ env.PACKAGE_NAME }}
-        python-version: ${{ env.MAIN_PYTHON_VERSION }}
-        checkout: false
+  #   - name: Build library source and wheel artifacts
+  #     uses: ansys/actions/build-library@36cd86710c966963f4dcec56a9670171618cf76a # v10.2.4
+  #     with:
+  #       library-name: ${{ env.PACKAGE_NAME }}
+  #       python-version: ${{ env.MAIN_PYTHON_VERSION }}
+  #       checkout: false
 
-  release:
-    runs-on: ubuntu-latest
-    needs: [smoke-tests, build-library, update-changelog]
-    environment: release
-    permissions:
-      id-token: write
-      contents: write
-    if: github.event_name == 'push' && contains(github.ref, 'refs/tags')
-    steps:
-      - name: "Download the library artifacts from build-library step"
-        uses: actions/download-artifact@37930b1c2abaa49bbe596cd826c3c89aef350131 # v7.0.0
-        with:
-          name: ${{ env.PACKAGE_NAME }}-artifacts
-          path: ${{ env.PACKAGE_NAME }}-artifacts
+  # release:
+  #   runs-on: ubuntu-latest
+  #   needs: [smoke-tests, build-library, update-changelog]
+  #   environment: release
+  #   permissions:
+  #     id-token: write
+  #     contents: write
+  #   if: github.event_name == 'push' && contains(github.ref, 'refs/tags')
+  #   steps:
+  #     - name: "Download the library artifacts from build-library step"
+  #       uses: actions/download-artifact@37930b1c2abaa49bbe596cd826c3c89aef350131 # v7.0.0
+  #       with:
+  #         name: ${{ env.PACKAGE_NAME }}-artifacts
+  #         path: ${{ env.PACKAGE_NAME }}-artifacts
 
-      - name: "Upload artifacts to PyPI using trusted publisher"
-        uses: pypa/gh-action-pypi-publish@ed0c53931b1dc9bd32cbe73a98c7f6766f8a527e # v1.13.0
-        with:
-          repository-url: "https://upload.pypi.org/legacy/"
-          print-hash: true
-          packages-dir: ${{ env.PACKAGE_NAME }}-artifacts
-          skip-existing: false
+  #     - name: "Upload artifacts to PyPI using trusted publisher"
+  #       uses: pypa/gh-action-pypi-publish@ed0c53931b1dc9bd32cbe73a98c7f6766f8a527e # v1.13.0
+  #       with:
+  #         repository-url: "https://upload.pypi.org/legacy/"
+  #         print-hash: true
+  #         packages-dir: ${{ env.PACKAGE_NAME }}-artifacts
+  #         skip-existing: false
 
-      - name: "Release to GitHub"
-        uses: ansys/actions/release-github@36cd86710c966963f4dcec56a9670171618cf76a # v10.2.4
-        with:
-          library-name: ${{ env.PACKAGE_NAME }}
-          token: ${{ secrets.GITHUB_TOKEN }}
+  #     - name: "Release to GitHub"
+  #       uses: ansys/actions/release-github@36cd86710c966963f4dcec56a9670171618cf76a # v10.2.4
+  #       with:
+  #         library-name: ${{ env.PACKAGE_NAME }}
+  #         token: ${{ secrets.GITHUB_TOKEN }}
 
-  doc-deploy-dev:
-    name: "Deploy development documentation"
-    if: github.ref == 'refs/heads/main'
-    runs-on: ubuntu-latest
-    needs: [clean-docs]
-    steps:
-      - name: "Deploy development documentation"
-        uses: ansys/actions/doc-deploy-dev@36cd86710c966963f4dcec56a9670171618cf76a # v10.2.4
-        with:
-          cname: ${{ env.DOCUMENTATION_CNAME }}
-          token: ${{ secrets.GITHUB_TOKEN }}
-          bot-user: ${{ secrets.PYANSYS_CI_BOT_USERNAME }}
-          bot-email: ${{ secrets.PYANSYS_CI_BOT_EMAIL }}
+  # doc-deploy-dev:
+  #   name: "Deploy development documentation"
+  #   if: github.ref == 'refs/heads/main'
+  #   runs-on: ubuntu-latest
+  #   needs: [clean-docs]
+  #   steps:
+  #     - name: "Deploy development documentation"
+  #       uses: ansys/actions/doc-deploy-dev@36cd86710c966963f4dcec56a9670171618cf76a # v10.2.4
+  #       with:
+  #         cname: ${{ env.DOCUMENTATION_CNAME }}
+  #         token: ${{ secrets.GITHUB_TOKEN }}
+  #         bot-user: ${{ secrets.PYANSYS_CI_BOT_USERNAME }}
+  #         bot-email: ${{ secrets.PYANSYS_CI_BOT_EMAIL }}
 
-  doc-deploy-stable:
-    name: "Deploy stable documentation"
-    if: github.event_name == 'push' && contains(github.ref, 'refs/tags')
-    runs-on: ubuntu-latest
-    needs: release
-    steps:
-      - name: "Deploy stable documentation"
-        uses: ansys/actions/doc-deploy-stable@36cd86710c966963f4dcec56a9670171618cf76a # v10.2.4
-        with:
-          cname: ${{ env.DOCUMENTATION_CNAME }}
-          token: ${{ secrets.GITHUB_TOKEN }}
-          bot-user: ${{ secrets.PYANSYS_CI_BOT_USERNAME }}
-          bot-email: ${{ secrets.PYANSYS_CI_BOT_EMAIL }}
+  # doc-deploy-stable:
+  #   name: "Deploy stable documentation"
+  #   if: github.event_name == 'push' && contains(github.ref, 'refs/tags')
+  #   runs-on: ubuntu-latest
+  #   needs: release
+  #   steps:
+  #     - name: "Deploy stable documentation"
+  #       uses: ansys/actions/doc-deploy-stable@36cd86710c966963f4dcec56a9670171618cf76a # v10.2.4
+  #       with:
+  #         cname: ${{ env.DOCUMENTATION_CNAME }}
+  #         token: ${{ secrets.GITHUB_TOKEN }}
+  #         bot-user: ${{ secrets.PYANSYS_CI_BOT_USERNAME }}
+  #         bot-email: ${{ secrets.PYANSYS_CI_BOT_EMAIL }}
