--- a/.github/workflows/ci_cd.yml
+++ b/.github/workflows/ci_cd.yml
@@ -300,7 +300,7 @@ jobs:
   doc-build:
     name: Make html and markdown documentation
     if: github.event.action != 'closed'
-    needs: [config-matrix] # smoke-tests
+    needs: [gen-stubs, config-matrix] # smoke-tests
     runs-on: ubuntu-latest
     strategy:
       matrix: ${{ fromJSON(needs.config-matrix.outputs.doc-build-matrix) }}
@@ -346,7 +346,7 @@ jobs:
   combine-docs:
     name: Combine documentation
     runs-on: ubuntu-latest
-    needs: [doc-build, config-matrix]
+    needs: [gen-stubs, doc-build, config-matrix]
     strategy:
       matrix:
         python-version: ${{ fromJSON(needs.config-matrix.outputs.doc-build-matrix).python-version }}
@@ -431,7 +431,7 @@ jobs:
   clean-docs:
     name: Clean HTML and Markdown documentation
     runs-on: ubuntu-latest
-    needs: [combine-docs, config-matrix]
+    needs: [gen-stubs, combine-docs, config-matrix]
     strategy:
       matrix:
         python-version: ${{ fromJSON(needs.config-matrix.outputs.doc-build-matrix).python-version }}
