--- a/.github/workflows/ci_cd.yml
+++ b/.github/workflows/ci_cd.yml
@@ -368,8 +368,11 @@ jobs:
         run: |
           combine_documentation() {
             combined_folder_name=$1
+            echo "Combining documentation into folder: $combined_folder_name"
             combined_folder_path=$(pwd)/$combined_folder_name
+            echo "Combined folder path: $combined_folder_path"
             version_folders=($(find . -maxdepth 1 -type d -name "$combined_folder_name-v[0-9][0-9][0-9]"))
+            echo "Version folders found: ${version_folders[@]}"
 
             for folder in "${version_folders[@]}"; do
               echo "Found version folder: $folder"
@@ -387,7 +390,10 @@ jobs:
             done
           }
 
+          echo "Combining HTML documentation..."
           combine_documentation "documentation-html"
+
+          echo "Combining Markdown documentation..."
           combine_documentation "documentation-md"
 
       - name: "Upload HTML documentation"
