--- a/.github/workflows/ci_cd.yml
+++ b/.github/workflows/ci_cd.yml
@@ -370,6 +370,7 @@ jobs:
             combined_folder_name=$1
             echo "Combining documentation into folder: $combined_folder_name"
             combined_folder_path=$(pwd)/$combined_folder_name
+            echo $(ls -l)
             echo "Combined folder path: $combined_folder_path"
             version_folders=($(find . -maxdepth 1 -type d -name "$combined_folder_name-v[0-9][0-9][0-9]"))
             echo "Version folders found: ${version_folders[@]}"
