--- a/.github/workflows/ci_cd.yml
+++ b/.github/workflows/ci_cd.yml
@@ -358,44 +358,50 @@ jobs:
         uses: actions/download-artifact@37930b1c2abaa49bbe596cd826c3c89aef350131 # v7.0.0
         with:
           pattern: documentation-html-v*
+          path: ${GITHUB_WORKSPACE}/documentation-html
+          merge-multiple: true
 
       - name: "Download all Markdown documentation"
         uses: actions/download-artifact@37930b1c2abaa49bbe596cd826c3c89aef350131 # v7.0.0
         with:
           pattern: documentation-md-v*
+          path: ${GITHUB_WORKSPACE}/documentation-md
+          merge-multiple: true
 
-      - name: "Combine HTML and Markdown documentation"
-        run: |
-          combine_documentation() {
-            combined_folder_name=$1
-            echo "Combining documentation into folder: $combined_folder_name"
-            combined_folder_path=$(pwd)/$combined_folder_name
-            echo $(ls -l)
-            echo "Combined folder path: $combined_folder_path"
-            version_folders=($(find . -maxdepth 1 -type d -name "$combined_folder_name-v[0-9][0-9][0-9]"))
-            echo "Version folders found: ${version_folders[@]}"
+      # - name: "Combine HTML and Markdown documentation"
+      #   run: |
+      #     combine_documentation() {
+      #       # documentation-html or documentation-md
+      #       combined_folder_name=$1
 
-            for folder in "${version_folders[@]}"; do
-              echo "Found version folder: $folder"
-              if [ -d "$combined_folder_path" ]; then
-                  folder_version="${folder##*-}"
-                  version_path="api/ansys/mechanical/stubs/${folder_version}"
-                  echo "Copying $folder/$version_path to $combined_folder_path/$version_path"
-                  cp -r $folder/$version_path/* $combined_folder_path/$version_path
-              else
-                  echo "Creating $combined_folder_path and copying contents from $folder"
-                  mkdir -p "$combined_folder_path"
-                  echo "$combined_folder_path folder created."
-                  cp -r "$folder/"* "$combined_folder_path"
-              fi
-            done
-          }
+      #       # pymechanical-stubs/documentation-html or pymechanical-stubs/documentation-md
+      #       combined_folder_path=$(pwd)/$combined_folder_name
 
-          echo "Combining HTML documentation..."
-          combine_documentation "documentation-html"
 
-          echo "Combining Markdown documentation..."
-          combine_documentation "documentation-md"
+      #       version_folders=($(find . -maxdepth 1 -type d -name "$combined_folder_name-v[0-9][0-9][0-9]"))
+      #       echo "Version folders found: ${version_folders[@]}"
+
+      #       for folder in "${version_folders[@]}"; do
+      #         echo "Found version folder: $folder"
+      #         if [ -d "$combined_folder_path" ]; then
+      #             folder_version="${folder##*-}"
+      #             version_path="api/ansys/mechanical/stubs/${folder_version}"
+      #             echo "Copying $folder/$version_path to $combined_folder_path/$version_path"
+      #             cp -r $folder/$version_path/* $combined_folder_path/$version_path
+      #         else
+      #             echo "Creating $combined_folder_path and copying contents from $folder"
+      #             mkdir -p "$combined_folder_path"
+      #             echo "$combined_folder_path folder created."
+      #             cp -r "$folder/"* "$combined_folder_path"
+      #         fi
+      #       done
+      #     }
+
+      #     echo "Combining HTML documentation..."
+      #     combine_documentation "documentation-html"
+
+      #     echo "Combining Markdown documentation..."
+      #     combine_documentation "documentation-md"
 
       - name: "Upload HTML documentation"
         uses: actions/upload-artifact@b7c566a772e6b6bfb58ed0dc250532a479d7789f # v6.0.0
@@ -403,7 +409,7 @@ jobs:
           github.event_name == 'workflow_dispatch' ||
           matrix.python-version == env.MAIN_PYTHON_VERSION
         with:
-          name: combined-documentation-html
+          name: documentation-html
           path: documentation-html
           retention-days: 7
 
@@ -413,7 +419,7 @@ jobs:
           github.event_name == 'workflow_dispatch' ||
           matrix.python-version == env.MAIN_PYTHON_VERSION
         with:
-          name: combined-documentation-md
+          name: documentation-md
           path: documentation-md
           retention-days: 7
 
