--- a/.github/workflows/ci_cd.yml
+++ b/.github/workflows/ci_cd.yml
@@ -357,11 +357,13 @@ jobs:
         uses: actions/download-artifact@37930b1c2abaa49bbe596cd826c3c89aef350131 # v7.0.0
         with:
           pattern: documentation-html-v*
+          path: documentation-html
 
       - name: "Download all Markdown documentation"
         uses: actions/download-artifact@37930b1c2abaa49bbe596cd826c3c89aef350131 # v7.0.0
         with:
           pattern: documentation-md-v*
+          path: documentation-md
 
       - name: Display structure of downloaded files
         run: ls -R
