--- a/pyproject.toml
+++ b/pyproject.toml
@@ -33,10 +33,10 @@ build = [
 doc = [
     "ansys-sphinx-theme[autoapi,changelog]==1.7.0",
     "ansys-tools-common==0.4.2",
-    "Sphinx==8.1.3",
+    "Sphinx>=6.1.0",
     "sphinx-copybutton==0.5.2",
-    "sphinx-notfound-page==1.1.0",
     "sphinx-design==0.7.0",
+    "sphinx-notfound-page==1.1.0",
     "sphinx-jinja==2.0.2",
     "autodoc_pydantic==2.2.0",
     "jupyter-sphinx==0.5.3",
