--- a/pyproject.toml
+++ b/pyproject.toml
@@ -31,19 +31,21 @@ build = [
     "ansys-pythonnet==3.1.0rc6"
 ]
 doc = [
-    "ansys-sphinx-theme[autoapi,changelog]==1.7.0",
     "ansys-tools-common==0.4.2",
-    "Sphinx>=6.1.0",
+    "ansys-sphinx-theme[autoapi]==1.6.4",
+    "Sphinx==7.4.0",
     "sphinx-copybutton==0.5.2",
-    "sphinx-design==0.7.0",
     "sphinx-notfound-page==1.1.0",
+    "sphinx-design==0.6.1",
     "sphinx-jinja==2.0.2",
     "autodoc_pydantic==2.2.0",
-    "jupyter-sphinx==0.5.3",
+    "jupyter_sphinx==0.5.3",
     "numpydoc==1.10.0",
-    "sphinx-autodoc-typehints>=3.6.1",
-    "sphinxcontrib-globalsubs==1.0.0",
-    "sphinxcontrib-httpdomain==1.8.1",
+    "sphinx-autodoc-typehints==2.3.0",
+    "sphinxcontrib-globalsubs==0.1.2",
+    "sphinxcontrib-httpdomain==2.0.0",
+    "sphinx-copybutton==0.5.2",
+    "sphinx_design==0.6.1",
     "sphinx-markdown-builder==0.6.9",
     "sphinxnotes-strike==2.0",
 ]
