--- a/.github/workflows/ci_cd.yml
+++ b/.github/workflows/ci_cd.yml
@@ -387,16 +387,20 @@ jobs:
       - name: "Install project & doc dependencies"
         run: |
           python -m pip install -e .[doc]
+          mkdir combined-documentation-html
+          mkdir combined-documentation-md
 
       - name: "Download all HTML documentation"
         uses: actions/download-artifact@37930b1c2abaa49bbe596cd826c3c89aef350131 # v7.0.0
         with:
           pattern: combined-documentation-html
+          path: combined-documentation-html
 
       - name: "Download all Markdown documentation"
         uses: actions/download-artifact@37930b1c2abaa49bbe596cd826c3c89aef350131 # v7.0.0
         with:
           pattern: combined-documentation-md
+          path: combined-documentation-md
 
       - name: "Replace Windows apostrophes with single quotes"
         run: |
